--- a/app/views/adjectives.html
+++ b/app/views/adjectives.html
@@ -1,21 +1,16 @@
-<form name="form"　class="form-inline" role="form" ng-repeat="item in adjectives">
-  <h1>{{item.kanji}} ({{item.kana}})</h1>
-  <h3>Present</h3>
-  <div class="form-group" ng-class="{ 'has-error': form.presentAffirmative.$invalid && form.presentAffirmative.$dirty, 'has-success': !form.presentAffirmative.$invalid && form.presentAffirmative.$dirty }">
-    <label class="control-label" for="presentAffirmative">Affirmative</label>
-    <input type="text" class="form-control" id="presentAffirmative" name="presentAffirmative" ng-model="answers[item.kanji].presentAffirmative" correct-answer="{{item.conjugations.present_affirmitive}}" required>
-  </div>
-  <div class="form-group" ng-class="{ 'has-error': form.presentNegative.$invalid && form.presentNegative.$dirty, 'has-success': !form.presentNegative.$invalid && form.presentNegative.$dirty }">
-    <label class="control-label" for="presentNegative">Negative</label>
-    <input type="text" class="form-control" id="presentNegative" name="presentNegative" ng-model="answers[item.kanji].presentNegative" correct-answer="{{item.conjugations.present_negative}}" required>
-  </div>
-	<h3>Past</h3>
-  <div class="form-group" ng-class="{ 'has-error': form.pastAffirmative.$invalid && form.pastAffirmative.$dirty, 'has-success': !form.pastAffirmative.$invalid && form.pastAffirmative.$dirty }">
-    <label class="control-label" for="pastAffirmative">Affirmative</label>
-    <input type="text" class="form-control" id="pastAffirmative" name="pastAffirmative" ng-model="answers[item.kanji].pastAffirmative" correct-answer="{{item.conjugations.past_affirmative}}" required>
-  </div>
-  <div class="form-group" ng-class="{ 'has-error': form.pastNegative.$invalid && form.pastNegative.$dirty, 'has-success': !form.pastNegative.$invalid && form.pastNegative.$dirty }">
-    <label class="control-label" for="pastNegative">Negative</label>
-    <input type="text" class="form-control" id="pastNegative" name="pastNegative" ng-model="answers[item.kanji].pastNegative" correct-answer="{{item.conjugations.past_negative}}" required>
-  </div>
-</form>
+<div class="row">
+	<div class="col-md-12">
+	<p>
+		Correct / Incorrect
+	</p>
+	<br/>
+	{{numberCorrect}} / {{numberIncorrect}} of {{numberOfQuestions}}
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<h1>{{currentQuestion.kanji}} ({{currentQuestion.kana}}) </h1>
+		Definition: {{currentQuestion.definition}}
+	</div>
+</div>
+<div class="slide-animate" ng-include="answerbox"></div>
