Clean up formatting a bit on mobile.

--- a/app/views/adjectives.html
+++ b/app/views/adjectives.html
@@ -1,15 +1,11 @@
 <div class="row">
 	<div class="col-md-12">
-	<p>
-		Correct / Incorrect
-	</p>
-	<br/>
-	{{numberCorrect}} / {{numberIncorrect}} of {{numberOfQuestions}}
+	Correct / Incorrect: {{numberCorrect}} / {{numberIncorrect}} of {{numberOfQuestions}}
 	</div>
 </div>
 <div class="row">
 	<div class="col-md-12">
-		<h1>{{currentQuestion.kanji}} ({{currentQuestion.kana}}) </h1>
+		<h2>{{currentQuestion.kanji}} ({{currentQuestion.kana}})</h2>
 		Definition: {{currentQuestion.definition}}
 	</div>
 </div>
