--- a/app/views/adjectives.html
+++ b/app/views/adjectives.html
@@ -5,8 +5,7 @@
 </div>
 <div class="row">
 	<div class="col-md-12">
-		<h2>{{currentQuestion.kanji}} ({{currentQuestion.kana}})</h2>
-		Definition: {{currentQuestion.definition}}
+		<h3>{{currentQuestion.kanji}} <small>({{currentQuestion.kana}}) - {{currentQuestion.definition}}</small></h3>
 	</div>
 </div>
 <div class="slide-animate" ng-include="answerbox"></div>
