--- a/app/views/result.html
+++ b/app/views/result.html
@@ -7,11 +7,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-8 col-md-6">
+        <div class="col-xs-6 col-md-6">
           <input type="text" autocapitalize="off" autocomplete="off" autocorrect="off"  class="form-control" id="answer" name="answer" ng-model="guess" disabled>
         </div>
         <div class="col-xs-1 col-md-1" >
-         <button ng-click="nextQuestion()" ng-enter="nextQuestion()">done</button>
+          <button class="btn btn-default" ng-click="nextQuestion()" ng-enter="nextQuestion()">done</button>
        </div>
      </div>
      <div ng-show='currentQuestion.correct'> Correct! </div>
