--- a/app/views/adjectives.html
+++ b/app/views/adjectives.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12">
-	Correct / Incorrect: {{numberCorrect}} / {{numberIncorrect}} of {{numberOfQuestions}}
+	<small>Correct / Incorrect: {{numberCorrect}} / {{numberIncorrect}} of {{numberOfQuestions}}</small>
 	</div>
 </div>
 <div class="row">
