--- a/app/views/result.html
+++ b/app/views/result.html
@@ -7,15 +7,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6 col-md-6">
+        <div class="col-xs-8 col-md-8">
           <input type="text" autocapitalize="off" autocomplete="off" autocorrect="off"  class="form-control" id="answer" name="answer" ng-model="guess" disabled>
         </div>
         <div class="col-xs-1 col-md-1" >
           <button class="btn btn-default" ng-click="nextQuestion()" ng-enter="nextQuestion()">done</button>
        </div>
      </div>
-     <div class="text-success" ng-show='currentQuestion.correct'> Correct! </div>
-     <div class="text-danger" ng-show='!currentQuestion.correct'> Bummer! Should be {{corrections()}} </div>
+     <div class="row">
+        <div class="col-xs-10 col-md-10">
+           <div class="text-success" ng-show='currentQuestion.correct'> Correct! </div>
+           <div class="text-danger" ng-show='!currentQuestion.correct'> Bummer! Should be {{corrections()}} </div>
+        </div>
+     </div>
    </div>
  </form>
 </div>
