--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,3 +3,6 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+.panel-body h3 {
+	margin-top: 0px;
+}
