--- a/app/views/verbs.html
+++ b/app/views/verbs.html
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-md-12">
-		<div class="panel panel-primary">
+		<div class="panel panel-success">
 			<div class="panel-heading">
-				 <span class="lead">Adjective <em>({{currentQuestion.title}})</em><span>
+				 <span class="lead">Verb <em>({{currentQuestion.title}})</em><span>
 			</div>
 			<div class="panel-body">
 				<h3>{{currentQuestion.kanji}} <small>({{currentQuestion.kana}}) - {{currentQuestion.definition}}</small></h3>
