--- a/app/views/grammar.html
+++ b/app/views/grammar.html
@@ -1,11 +1,11 @@
 <div class="row">
 	<div class="col-md-12">
-		<div class="panel panel-primary">
+		<div class="panel panel-info">
 			<div class="panel-heading">
 				 <span class="lead">Grammar <em>({{currentQuestion.title}})</em><span>
 			</div>
 			<div class="panel-body">
-				<h3>{{currentQuestion.kanji}} <small>({{currentQuestion.kana}}) - {{currentQuestion.definition}}</small></h3>
+				<h3>{{currentQuestion.definition}}</h3>
 				<div class="slide-animate" ng-include="answerbox"></div>
 			</div>
 			<div class="panel-footer">
