--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,5 +1,5 @@
 <div ng-controller="ResultCtrl">
-  <form name="form"　class="form-horizontal" role="form">
+  <form name="form"　class="form-horizontal" role="form" autocomplete="off">
       <div class="row">
         <div class="col-xs-7 col-md-8">
           <input type="text" autocapitalize="off" autocomplete="off" autocorrect="off"  class="form-control" id="answer" name="answer" ng-model="guess" disabled>
