--- a/app/views/adjectives.html
+++ b/app/views/adjectives.html
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				 <span class="lead">Grammar <em>({{currentQuestion.title}})</em><span>
+				 <span class="lead">Adjective <em>({{currentQuestion.title}})</em><span>
 			</div>
 			<div class="panel-body">
 				<h3>{{currentQuestion.kanji}} <small>({{currentQuestion.kana}}) - {{currentQuestion.definition}}</small></h3>
